Be Social Menu Fix
Fixing Be Social menu which is not aligned properly due to FontAwesome
size.

--- a/themes/default/css/_besocial/index_besocial.css
+++ b/themes/default/css/_besocial/index_besocial.css
@@ -1363,10 +1363,14 @@ a.help .icon {
 @media screen and (min-width: 50em) {
 		#menu_nav .listlevel1.subsections>a:before {
 		font-family: "FontAwesome";
-		margin: 0 5px 0 0;
+		margin: -1px 5px 0 0;
+		float: left;
 		font-size: 1.2em;
 		content: "\f0d7";
 		color: #43a8da;
+	}
+		#menu_nav .listlevel1 {
+		margin: 1px 2px 0;
 	}
 }
 @media screen and (max-width: 50em) {
